# kimi-project-desktop

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  kimi_import.rs  lib.rs  main.rs  pty.rs  state.rs  terminal.rs
src/components/: AddProjectDialog.tsx  CommandInput.tsx  EditProjectDialog.tsx  EmptyState.tsx  ProjectDetail.tsx  ProjectList.tsx  RightPanel.tsx  SearchBox.tsx  Terminal.tsx  Toast.tsx
src/store/: useAppStore.ts
tests/: App.test.tsx  setup.ts
tests/components/: AddProjectDialog.test.tsx  EditProjectDialog.test.tsx  ProjectDetail.test.tsx  ProjectList.test.tsx  Toast.test.tsx
